--- a/CERS.csproj
+++ b/CERS.csproj
@@ -44,7 +44,7 @@
 		<MauiIcon Include="Resources\AppIcon\ic_launcher_appicon.png"  />
 		
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\AppIcon\ic_launcher_appicon.png" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\AppIcon\ic_launcher_appicon.png" Color="#FFFFFF" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
